--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,25 @@
-<%= form_for @user do |f| %>
-  <p>
-    <%= f.label :Name %><br>
-    <%= f.text_field :firstname, :placeholder=>"first name"%><%= f.text_field :lastname, :placeholder=>"last name"%>
-  </p>
 
-  <p>
-    <%= f.label :Username %><br>
-    <%= f.text_field :username %>
-  </p>
-  <p>
-    <%= f.label :Password %><br>
-    <%= f.password_field :password %>
-  </p>
+<div class="wrapper">
 
-  <p>
-    <%= f.label :Confirm_Password %><br>
-    <%= f.password_field :password_confirmation %>
-  </p>
-
-  <p>
-    <%= f.label :Email %><br>
-    <%= f.email_field :email %>
-  </p>
-
-  <p>
-  <%= f.label :Gender %><br>
-  <%= f.select :gender, options_for_select(%w[Male Female Other]) %>
-</p>
-
-<p>
-<%= f.submit "Sign up" %>
-</p>
-
+<%= form_tag users_path, :method => "post", :class => "form-signin" do |f| %>
+  <h2 class="form-signin-heading">Sign Up</h2>
+      <input type="text" class="form-control" name="firstname" placeholder="First Name" required="" autofocus="" />
+      <input type="text" class="form-control" name="lastname" placeholder="Last Name" required="" autofocus="" />
+      <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
+      <input type="email" class="form-control" name="email" placeholder="Email" required="" autofocus="" />
+      <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
+      <input type="password" class="form-control" name="password_confirmation" placeholder="Confirm password" required=""/> 
+      
+      <div class="control-group">
+        <label class="control-label">Gender</label>
+          <div class="controls">
+            
+            <p><div id="gender" name="gender" class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-info">Male</button>
+              <button type="button" class="btn btn-info">Female</button>
+            </div></p>
+          </div>
+      </div>
+    <%= submit_tag "Sign up", :class => "btn btn-primary btn-lg btn-block" %>
 <% end %>
+</div>
