Worked on css for dashboard

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Credentials Listings</h1>
 
-<table>
+<table class="table table-striped">
 <% if !@credentials.empty? %>
   <% @credentials.each do |m| %>
     <tr>
