--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -8,6 +8,6 @@
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
   <%= submit_tag "Login", :class => "btn btn-primary btn-lg	btn-block" %>
-  <p><%= link_to "Sign up", new_user_path %></p>
+  <p><br><%= link_to "Sign up", new_user_path %></p>
 <% end %>
 </div>
