--- a/app/views/credentials/new.html.erb
+++ b/app/views/credentials/new.html.erb
@@ -1,8 +1,19 @@
 <h1>Enter new credential</h1>
+<br><br>
+<div class="row">
+  <div class="col-md-4">
+<%= form_for [@user, @credential], class: 'form-horizontal'  do |f|  %>
+  <div class="form-group">
+    <%= f.text_field :name, class: 'form-control', :placeholder => 'Name' %>
+  </div>
 
-<%= form_for [@user, @credential] do %>
-  Name: <%= text_field_tag :name %><br>
-  Number: <%= text_field_tag :number %><br>
-  <%= submit_tag "Add" %><%= link_to "Cancel", user_path(@user) %>
+  <div class="form-group">
+    <%= f.text_field :number, class: 'form-control', :placeholder => 'Number'%>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Add", class: 'btn btn-primary' %><%= link_to "Cancel", user_path(@user), class: 'btn btn-default'  %>
+  </div>
 <% end %>
+  </div>
+</div>
 
