--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,9 @@
 <%= form_tag users_path, :method => "post", :class => "form-signin" do |f| %>
   <h2 class="form-signin-heading">Sign Up</h2>
       <input type="text" class="form-control" name="firstname" placeholder="First Name" required="" autofocus="" />
-      <input type="text" class="form-control" name="lastname" placeholder="Last Name" required="" autofocus="" />
-      <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
-      <input type="email" class="form-control" name="email" placeholder="Email" required="" autofocus="" />
+      <input type="text" class="form-control" name="lastname" placeholder="Last Name" required="" />
+      <input type="text" class="form-control" name="username" placeholder="Username" required="" />
+      <input type="email" class="form-control" name="email" placeholder="Email" required=""/>
       <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
       <input type="password" class="form-control" name="password_confirmation" placeholder="Confirm password" required=""/> 
       
