--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,26 @@
 
 <%= link_to "Add Credential", new_user_credential_path(@user) %>
 
-<table>
+
+<table class="table table-striped">
+  <thead>
   <tr>
     <th>Name</th>
     <th>Number</th>
   </tr>
+</thead>
+<tbody>
+  <% if @credentials.blank? %>
+    <tr>
+      <td colspan="2"><h3 class="text-center">No Credentials entered yet</td>
+    </tr>
+  <% else %>
 <% @credentials.each do |c| %>
   <tr>
     <td><%= c.name %></td>
     <td><%= c.number %></td>
   </tr>
+<% end %>
+</tbody>
 <% end %>
 </table>
