Added bootstrap navbar to sign up page

--- a/app/views/layouts/dasboard.html.erb
+++ b/app/views/layouts/dasboard.html.erb
@@ -51,7 +51,7 @@
                                                                           <img class="media-object" src="http://placehold.it/50x50" alt="">
                                                                       </span>
                                                                       <div class="media-body">
-                                                                          <h5 class="media-heading"><strong>John Smith</strong>
+                                                                          <h5 class="media-heading"><strong>User</strong>
                                                                           </h5>
                                                                           <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                                                           <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -147,7 +147,7 @@
                                                           <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                                                       </li>
                                                       <li>
-                                                          <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
+                                                          <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Add New Credentials</a>
                                                       </li>
                                                       <li>
                                                           <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a>
