Worked on edit credential feature

--- a/app/views/credentials/edit.html.erb
+++ b/app/views/credentials/edit.html.erb
@@ -1,8 +1,9 @@
-<h1>Enter new credential</h1>
+
+<h1>Edit credential</h1>
 <br><br>
 <div class="row">
   <div class="col-md-4">
-<%= form_for [@user, @credential], class: 'form-horizontal'  do |f|  %>
+<%= form_for [@user, @credential], method: 'patch', class: 'form-horizontal'  do |f|  %>
   <div class="form-group">
     <%= f.text_field :name, class: 'form-control', :placeholder => 'Name' %>
   </div>
@@ -11,7 +12,7 @@
     <%= f.text_field :number, class: 'form-control', :placeholder => 'Number'%>
   </div>
   <div class="form-group">
-    <%= f.submit "Add", class: 'btn btn-primary' %><%= link_to "Cancel", user_credentials_path(@user), class: 'btn btn-default'  %>
+    <%= f.submit "Update", class: 'btn btn-primary' %><%= link_to "Cancel", user_credentials_path(@user), class: 'btn btn-default'  %>
   </div>
 <% end %>
   </div>
