--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -1,16 +1,29 @@
-<h1>Credentials Listings</h1>
+<h1>Credentials</h1>
+
+<%= link_to "Add Credential", new_user_credential_path(@user) %>
+
 
 <table class="table table-striped">
-<% if !@credentials.empty? %>
-  <% @credentials.each do |m| %>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Number</th>
+  </tr>
+</thead>
+<tbody>
+  <% if @credentials.blank? %>
     <tr>
-      <td><%= m.name %></td>
-      <td><%= m.number %></td>
+      <td colspan="2"><h3 class="text-center">No Credentials entered yet</td>
+    </tr>
+  <% else %>
+<% @credentials.each do |c| %>
+  <tr>
+    <td><%= c.name %></td>
+    <td><%= c.number %></td>
+    <td class="text-right"><%= link_to "Edit", edit_user_credential_path(@user, c), class: 'btn btn-primary' %>
+    <%= link_to "Delete", c, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %></td>
   </tr>
 <% end %>
-<% else %>
-  No credentials yet
+</tbody>
 <% end %>
 </table>
-
-Display: <%= @test %>
