--- a/app/views/layouts/dasboard.html.erb
+++ b/app/views/layouts/dasboard.html.erb
@@ -37,7 +37,7 @@
                                                       <span class="icon-bar"></span>
                                                       <span class="icon-bar"></span>
                                                   </button>
-                                                  <a class="navbar-brand" href="index.html">SB Admin</a>
+                                                  <a class="navbar-brand" href="index.html">SMARTID</a>
                                               </div>
                                               <!-- Top Menu Items -->
                                               <ul class="nav navbar-right top-nav">
