--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,3 @@
-<h1>Credentials</h1>
-
-<%= link_to "Add Credential", new_user_credential_path(@user) %>
+<h1>User Profile</h1>
 
 
-<table class="table table-striped">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Number</th>
-  </tr>
-</thead>
-<tbody>
-  <% if @credentials.blank? %>
-    <tr>
-      <td colspan="2"><h3 class="text-center">No Credentials entered yet</td>
-    </tr>
-  <% else %>
-<% @credentials.each do |c| %>
-  <tr>
-    <td><%= c.name %></td>
-    <td><%= c.number %></td>
-    <td class="text-right"><%= button_tag "Edit", class: 'btn btn-primary' %>
-    <%= button_tag "Delete", class: 'btn btn-danger' %></td>
-  </tr>
-<% end %>
-</tbody>
-<% end %>
-</table>
