Worked on delete credential feature

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= c.name %></td>
     <td><%= c.number %></td>
     <td class="text-right"><%= link_to "Edit", edit_user_credential_path(@user, c), class: 'btn btn-primary' %>
-    <%= link_to "Delete", c, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %></td>
+    <%= link_to "Delete", user_credential_path(@user, c), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %></td>
   </tr>
 <% end %>
 </tbody>
